--- a/angular-routing/src/app/pokemon-detail/pokemon-detail.component.html
+++ b/angular-routing/src/app/pokemon-detail/pokemon-detail.component.html
@@ -1,6 +1,6 @@
 <h1>{{pokemon.name}}</h1>
 <ul>
   <li *ngFor="let ability of pokemon.abilities">
-    {{ability.name}}
+    {{ability.ability.name}}
   </li>
 </ul>
